# learning

./: .gitignore  Exploratory_data_analysis.Rmd  README.md  R_markdown.Rmd  kolos_1.Rmd  package-lock.json  package.json  test.h5  zad_1.R  zad_2.R  zad_3.R  zad_4.R  zaj_1.R
06less/sandbox/less/: styles.less
15socket-io/: serwer.js
Django/admin_tests/: Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
Django/admin_tests/app/: settings.py  urls.py
Django/admin_tests/core/: admin.py  models.py
Django/admin_tests/core/management/commands/: wait_for_db.py
Django/admin_tests/core/migrations/: 0001_initial.py  0002_group.py  0003_auto_20210319_0851.py  0004_group_country.py  0005_auto_20210319_1137.py
Django/admin_tests/core/tests/: test_models.py
Django/django_2_book/: pyproject.toml
Django/django_2_book/blog/: models.py
Django/django_2_book/blog/migrations/: 0001_initial.py
Django/django_2_book/core/: settings.py
Django/django_3_book/project_blog/: db.sqlite3  manage.py  pyproject.toml  tox.ini
Django/django_3_book/project_blog/blog/: admin.py  forms.py  models.py  urls.py  views.py
Django/django_3_book/project_blog/blog/migrations/: 0001_initial.py  0002_auto_20210414_1532.py
Django/django_3_book/project_blog/blog/templates/: pagination.html
Django/django_3_book/project_blog/blog/templates/blog/: base.html
Django/django_3_book/project_blog/blog/templates/blog/post/: detail.html  list.html  share.html
Django/django_3_book/project_blog/project_blog/: asgi.py  settings.py  urls.py  wsgi.py
FastAPI/Docs-Example/: main.py  pyproject.toml
FastAPI/Docs-Tutorial-User-Guide/: 01_intro.py  02_first_steps.py  03_path_params.py  04_query_params.py  05_request_body.py  06_query_params_and_string_validations.py  07_path_parameters_and_numeric_validations.py  08_body_multiple_parameters.py  09_body_fields.py  10_body_nested_models.py  11_Declare_Request_Example_Data.py  12_Extra_Data_Types.py  13_Cookie_Parameters.py  14_Header_Parameters.py  15_Response_Model.py  16_Extra_Models.py  17_Response_Status_Code.py  18_Form_Data.py  19_Request_Files.py  20_Request_Forms_and_Files.py  21_Handling_Errors.py  22_Path_Operation_Configuration.py  23_JSON_Compatible_Encoder.py  24_Body_Updates.py  README.md  main.py  pyproject.toml
Google Chrome Extensions/an_object_is_a/build_a_chrome_extension_with_React/: .prettierrc.js  README.md  package-lock.json  package.json  webpack.config.js
Google Chrome Extensions/an_object_is_a/chrome_extension_getting_past_CORS/: .prettierrc.js  background.js  foreground.js  manifest.json  options.html  popup.html
Google Chrome Extensions/an_object_is_a/copy_and_search_chrome_extension/: README.md
Google Chrome Extensions/an_object_is_a/how_to_build_chrome_extension_2021/: background.js  manifest.json  mystyles.css  popup.html
Google Chrome Extensions/build_a_simple_google_chrome_extension/: manifest.json
Google Chrome Extensions/chrome_devs_docs/chrome_devs_extensions_overview/: .prettierrc.js  manifest.json
ML/: README.md
ML/SelfDrivingCar/brains/: level_2.pth  level_3.pth
ML/eye_tracking/: pyproject.toml  track.py
ML/mat_plot_lib_ml_0_to_mastery/: Introduction to Matplotlib.ipynb
MyPackage/SubPackage/: mysubscript.py
Notebooks/: Debugger.ipynb  Function Practice Exercises.ipynb  Functions.ipynb
Python/GUI_Programming_with_PyQt_Path/build_calculator/: pyproject.toml
Python/GUI_Programming_with_PyQt_Path/build_calculator/build_calculator/: dialog.py  form.py  grid.py  hello.py  horizontal.py  main_window.py  pycalc.py  signals_slots.py  vertical.py
Python/GUI_Programming_with_PyQt_Path/build_calculator/tests/: test_build_calculator.py
Python/SelfDrivingCar/: ai.py  map.py
Python/heart_disease/: Heart_Disease.ipynb  environment.yml
Python/martinheinz/ultimate_guide_to_python_debugging/: README.md  crashing_app.py  customDict.py  fromYaml.py  logging.yaml  loggingDecorators.py  main.py  pyproject.toml  reprForLogReadable.py
Python/portilla_python_bootcamp/: mymodule.py  myprogram.py  one.py  two.py
Python/portilla_python_bootcamp/Milestone2/: dealer.py  human.py  main.py  player.py  tools_of_trade.py
Python/portilla_python_bootcamp/MyPackage/: __init__.py  mainScript.py
Python/sample_project/: IntroductionToNumpy.ipynb  IntroductionToPandas.ipynb  JupyterWalkthrough.ipynb  numpy-exercises.ipynb
R/: .RData  .Rhistory  Fun_starts.Rmd  R_markdown.Rmd  R_markdown.html  zad_4.R  zad_5.R  zad_6.R  zadanie5.txt
React/common_hook_mistakes/: .prettierrc.js  package-lock.json
React/common_hook_mistakes/src/: App.js  (+2 more)
React/formik-material/: .prettierrc  package-lock.json  package.json
React/monsters_rolodex/: package.json
React/react_testing_library_tutorial/: .eslintrc.js  notes.md  package-lock.json  package.json
React/with-formik/: .prettierrc  README.md  package-lock.json  package.json
Scala/scala_crash_course_dev_inside_you/: README.md
SelfDrivingCar/brains/: level_1.pth
Studia/BGT/: countries_info_exploration.ipynb
Studia/MHE/: program.py
Studia/MLR/: kf.json  test.lbl
TS_JS/build_a_simple_google_chrome_extension/: popup.html  popup.js
TS_JS/chrome_devs_extensions/: .prettierrc.js  README.md  background.js  manifest.json  options.js  popup.html
TS_JS/net_ninja_ts/: README.md
TS_JS/public/: app.js  enums.js  generics.js  tuples.js
TS_JS/src/: app.ts
Tools/parcel/: README.md  index.html  index.js  package-lock.json  package.json
Tools/webpack/: .eslintrc.json  README.md  notes.md  package-lock.json  package.json  webpack.config.js
Traversy_Python_Setup/: main.py
Unittest/: test_cap.py
algorithms_statistics/: showdown.py
data/: test_2.txt
es7_es8/: es8.js
lab1/: queue.yaml
notes/: customize_sublime.txt
public/: sandbox.js
sample_project/: expensive-cars.csv  pandas-exercises.ipynb
scope/: exercise1.js
src/: App.js  actions.js  constants.js  index.js  reducers.js
src/Content/: Content.test.js
src/StateEventProps/: state-event-props.component.jsx  state-event-props.test.js
src/interfaces/: HasFormatter.ts
zaj_3_bayes/: bayes.py
(+334 files in other folders)
