[tool.poetry]
name = "admin_tests"
version = "0.1.0"
description = ""
authors = ["Paweł Benkowski <pawlo97.pb@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.1.7"
djangorestframework = "^3.12.2"
psycopg2 = "^2.8.6"
python-decouple = "^3.4"
django-grappelli = "^2.14.3"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
isort = "^5.7.0"
flakehell = "^0.9.0"
pycodestyle = "^2.7.0"
pyflakes = "^2.3.0"
pylint = "^2.7.2"
flake8-commas = "^2.0.0"
flake8-quotes = "^3.2.0"

[tool.black]
line-length = 79

[tool.isort]
profile = "django"

[tool.flakehell]
format = "colored"
exclude = [".venv"]
max_line_length = 79
show_source = true
inline-quotes = "double"

[tool.flakehell.plugins]
pyflakes = ["+*"]
pycodestyle = ["+*"]
pylint = ["+*", "-C0415"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
