[tool.poetry]
name = "django2book"
version = "0.1.0"
description = ""
authors = ["Paweł Benkowski <pawlo97.pb@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "2.2.19"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
black = "^20.8b1"
pytest = "^6.2.2"
isort = "^5.7.0"

[tool.black]
line-length = 79

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
