[tool.poetry]
name = "docs-example"
version = "0.1.0"
description = ""
authors = ["Paweł Benkowski <pawlo97.pb@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = {extras = ["all"], version = "^0.65.2"}

[tool.poetry.dev-dependencies]
black = "^21.5b2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
