[tool.poetry]
name = "docs-tutorial-user-guide"
version = "0.1.0"
description = "Tutorial - User Guide from official FastAPI docs, created 10.06.2021"
authors = ["Paweł Benkowski <pawlo97.pb@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
uvicorn = "^0.14.0"
fastapi = "^0.65.2"
pydantic = "^1.8.2"

[tool.poetry.dev-dependencies]
black = "^21.5b2"
isort = "^5.8.0"
flakehell = "^0.9.0"
pycodestyle = "^2.7.0"
pyflakes = "^2.3.1"
pylint = "^2.8.3"

[tool.isort]
import_heading_stdlib = 'Builtins'
import_heading_firstparty = "First Party"
import_heading_thirdparty = "Third party"
import_heading_localfolder = "Local"

[tool.black]
line-length = 79

[tool.flakehell]
max_line_length = 79
format = 'colored'
show_source = true
exclude = ['.venv']

[tool.flakehell.plugins]
pyflakes = ['+*']
pycodestyle = ['+*', '-E203']
pylint = ["+*", '-C0330', '-C0103', '-R0903']

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
