[tool.poetry]
name = "eye_tracking"
version = "0.1.0"
description = ""
authors = ["Paweł Benkowski <pawlo97.pb@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.20.1"
opencv-python = "3.4.13.47"

[tool.poetry.dev-dependencies]
flakehell = "^0.9.0"
pylint = "^2.7.2"
pyflakes = "^2.3.1"
isort = "^5.8.0"
black = "^20.8b1"
pycodestyle = "^2.7.0"

[tool.black]
line-length = 79

[tool.isort]
profile = "black"
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", ]
import_heading_stdlib = "Builtins"
import_heading_firstparty = "First Party"
import_heading_thirdparty = "Third party"

[tool.flakehell]
format = "colored"
exclude = [".venv"]
max_line_length = 79
show_source = true

[tool.flakehell.plugins]
pyflakes = ["+*"]
pycodestyle = ["+*", "-E501"]
pylint = ["+*", "-C0330", "-C0301", "-R0903"]


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
