[tool.poetry]
name = "project_blog"
version = "04.03.2021"
description = "Sections 1 - 3 from django 3 book"
authors = ["Paweł Benkowski <pawlo97.pb@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.1.7"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
isort = "^5.7.0"
flake8 = "^3.8.4"
pytest = "^6.2.2"

[tool.black]
line-length = 79
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs        
    | \.git         
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
