[tool.poetry]
name = "build_calculator"
version = "0.1.0"
description = ""
authors = ["Paweł Benkowski <pawlo97.pb@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pyqt5 = "^5.15.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.8.4"
black = "^20.8b1"
isort = "^5.7.0"

[tool.black]
line-length=79

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
